# sorbet

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clang_format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .ignore  .lldbinit  .mergify.yml  .rubocop.yml  .travis.yml  .vimspector.json  ACKNOWLEDGEMENTS.md  AGENTS.md  BUILD  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Gemfile  ITERATOR_USAGE_EXAMPLE.md  JRuby.md  LICENSE  MODULE.bazel  Makefile  NOTICE  README.md  Rakefile  Session.vim  TASKS.md  TODO  WORKSPACE  abstract_new_without_alloc.rb  actually_it_works.rb  bar.rb  bazel  (+48 more)
.bazelversion_checksums/: darwin-arm64  darwin-x86_64  linux-arm64  linux-x86_64
.buildkite/: README.md  all-succeeded.sh  annotate.rb  assign-reviewers.sh  build-emscripten.sh  build-ruby-wasm.sh  build-ruby.sh  build-sorbet-and-sorbet-static-gems.sh  build-sorbet-runtime.sh  build-sorbet-static-and-runtime.sh  build-static-release-java.rb  build-static-release-java.sh  build-static-release.sh  build-vscode-extension.sh  build-website.sh  codecov.yml  combine-coverage.sh  coverage-static-sanitized.sh  dummy.gemspec  gh-release.sh  linters.sh  pipeline.sh  pipeline.yaml  publish-ruby-gems.sh  publish.sh  publish_ruby_gems.sh  release-static.sh  request-review.sh  reviewer-list.txt  test-and-build-rbi-generation.sh  test-and-build-ruby-runtime.sh  test-compiler.sh  test-rbi-gen.sh  test-sorbet-gem.sh  test-sorbet-rubyfmt.sh  test-static-sanitized.sh  test-vscode-extension.sh  test.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.spin/: bootstrap  packages.yml
ast/: ArgParsing.cc  ArgParsing.h  BUILD  Context.cc  Context.h  Files.cc  Files.h  Hashing.h  Helpers.cc  Helpers.h  Loc.cc  Loc.h  Names.cc  Names.h  ParamParsing.cc  ParamParsing.h  Reporter.cc  Reporter.h  Symbols.cc  Symbols.h  TreeCopying.cc  TreeEquality.cc  TreeMap.cc  TreeMap.h  TreeSanityChecks.cc  Trees.cc  Trees.h  Types.cc  Types.h  Verifier.cc  Verifier.h  ast.h  ast_test.cc  types.cc  types.h
bin2/: BUILD  compile_and_run_one  ruby
blog/: atom.xml  feed.xml  index.html
cfg/: BUILD  CFG.cc  CFG.h  Instructions.cc  Instructions.h  LinkRef.cc  LinkRef.h  LocalRef.cc  LocalRef.h  sorted_vector_helpers.cc  sorted_vector_helpers.h
ci/: pay-server-common.bash  run_tests.sh  stripe-internal-ruby-typer-pay-server-sha  stripe-internal-ruby-typer-pay-server-typechecked  stripe-internal-ruby-typer-pay-server.sh  stripe-internal-ruby-typer.sh  stripe-internal-sorbet-pay-server-random  stripe-internal-sorbet-pay-server-sanitized.sh  stripe-internal-sorbet-pay-server-sha  stripe-internal-sorbet-pay-server-typechecked  stripe-internal-sorbet-pay-server.sh  stripe-internal-sorbet.sh
class_flatten/: BUILD  class_flatten.cc  class_flatten.h
common/: BUILD  ConcurrentQueue.h  ConstExprStr.h  Counters.cc  Counters.h  Counters_impl.h  EarlyReturnWithCode.cc  EarlyReturnWithCode.h  Error.h  Exception.h  FileOps.h  FileSystem.cc  FileSystem.h  JSON.cc  JSON.h  KeyValueStore.cc  KeyValueStore.h  Levenstein.cc  Levenstein.h  Path.cc  Path.h  ProgressIndicator.cc  ProgressIndicator.h  Random.cc  Random.h  StableStringStorage.h  Subprocess.cc  Subprocess.h  ThreadQueue.h  Timer.cc  Timer.h  UIntSet.cc  UIntSet.h  UIntSetForEach.h  WorkerPool.cc  WorkerPool.h  backtrace.cc  common.cc  common.h  counters.cc  (+5 more)
community/: index.html
compiler/: BUILD  README.md  main.cc
core/: ArityHash.cc  ArityHash.h  AutocorrectSuggestion.cc  AutocorrectSuggestion.h  BUILD  BufferedErrorQueue.cc  BufferedErrorQueue.h  CompiledLevel.h  Context.cc  Context.h  Counters.cc  Counters.h  Counters_impl.h  DebugOnlyCheck.h  Error.cc  Error.h  ErrorCollector.cc  ErrorCollector.h  ErrorFlusher.cc  ErrorFlusher.h  ErrorFlusherBase.h  ErrorFlusherStdout.cc  ErrorFlusherStdout.h  ErrorQueue.cc  ErrorQueue.h  ErrorQueueMessage.h  Errors.cc  Errors.h  FileHash.cc  FileHash.h  FileRef.h  Files.cc  Files.h  FoundDefinitions.cc  FoundDefinitions.h  GlobalState.cc  GlobalState.h  GlobalSubstitution.cc  GlobalSubstitution.h  Hashing.h  (+48 more)
core/insert_method/: BUILD.bazel  insert_method.cc  insert_method.h
core/source_generator/: BUILD.bazel  source_generator.cc  source_generator.h
css/: main.css
definition_validator/: #validator.cc#  BUILD  validator.cc  validator.h  variance.cc  variance.h
demo/: Makefile.patch  Readme  extconf.rb  foobar.c  granita.h
docs/: JRuby.md  README.md  abstract.html  adopting.html  anything.html  attached-class.html  autocompletion.html  bad-rbi.html  build-llvm.md  case_desugaring.md  class-of.html  class-types.html  cli-ref.html  cli.html  code-actions.html  community.html  compiler-caveats.md  compiler-internals.md  compressors.md  debugging-crashes.md  design-proposal-template.md  doc-comments.html  error-reference.html  exhaustiveness.html  faq.html  final.html  flow-sensitive.html  from-typescript.html  generics.html  go-to-def.html  gradual.html  highlight-untyped.html  hover.html  index.html  inline.html  internals.md  intersection-types.html  lmdb.md  lsp-dev-guide.md  lsp-typed-level.html  (+58 more)
dsl/: BUILD  ChalkODMProp.cc  ChalkODMProp.h  ClassNew.cc  ClassNew.h  Command.cc  Command.h  DSLBuilder.cc  DSLBuilder.h  DefaultArgs.cc  DefaultArgs.h  Delegate.cc  InterfaceWrapper.cc  InterfaceWrapper.h  Mattr.cc  Mattr.h  Minitest.cc  Minitest.h  MixinEncryptedProp.cc  OpusEnum.cc  OpusEnum.h  Plugin.cc  Plugin.h  Private.cc  Prop.cc  Prop.h  ProtobufDescriptorPool.cc  ProtobufDescriptorPool.h  Rails.cc  Regexp.cc  Regexp.h  Sinatra.cc  Sinatra.h  Struct.cc  Struct.h  TypeMembers.cc  attr_reader.cc  attr_reader.h  dsl.cc  dsl.h  (+9 more)
emscripten/: .gitignore  BUILD  build.sh  main.cc
en/: community.html  index.html
flatten/: flatten.cc  flatten.h
flattener/: BUILD  flatten.cc  flatten.h
hashing/: BUILD  hashing.cc  hashing.h
infer/: BUILD  SigSuggestion.cc  SigSuggestion.h  Types.cc  Types.h  environment.cc  environment.h  infer.h  infer_test.cc  inference.cc  (+1 more)
main/sig_finder/: BUILD.bazel  sig_finder.cc  sig_finder.h
sig_finder/: BUILD.bazel  sig_finder.cc  sig_finder.h
(+14118 files in other folders)
