module(
    name = "com_stripe_ruby_typer",
    version = "0.0.0",
)

# Core Bazel dependencies from BCR
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
# bazel_features comes transitively from protobuf

# Core libraries
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")
bazel_dep(name = "abseil-cpp", version = "20240722.0", repo_name = "com_google_absl")

# Rule sets (rules_cc stays in WORKSPACE for toolchains_llvm compatibility)
bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.0")

# Testing
bazel_dep(name = "doctest", version = "2.4.11")

# C++ Libraries (migrated from WORKSPACE)
bazel_dep(name = "lz4", version = "1.10.0.bcr.1")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "xxhash", version = "0.8.3.bcr.1")
bazel_dep(name = "mimalloc", version = "2.2.4")
bazel_dep(name = "spdlog", version = "1.16.0.bcr.2")
bazel_dep(name = "libprotobuf-mutator", version = "1.3")
bazel_dep(name = "rapidjson", version = "1.1.0")

archive_override(
    module_name = "rapidjson",
    urls = ["https://github.com/Tencent/rapidjson/archive/f376690822cbc2d17044e626be5df21f7d91ca8f.zip"],
    strip_prefix = "rapidjson-f376690822cbc2d17044e626be5df21f7d91ca8f",
    integrity = "sha256-lCUnZYPf+QIM7mMyRysM8keuMly18m2+FXGD90faORA=",
    build_file = "//third_party/rapidjson:rapidjson.BUILD",
    patches = ["//third_party/rapidjson:module.patch"],
)

bazel_dep(name = "lmdb", version = "0.9.29")

archive_override(
    module_name = "lmdb",
    urls = ["https://github.com/LMDB/lmdb/archive/da9aeda08c3ff710a0d47d61a079f5a905b0a10a.zip"],
    strip_prefix = "lmdb-da9aeda08c3ff710a0d47d61a079f5a905b0a10a",
    integrity = "sha256-iToyS2DGRl7c9/632vrLPV9YA2SfG13m9FOzptniu5c=",
    build_file = "//third_party/lmdb_override:lmdb.BUILD",
    patches = [
        "//third_party/lmdb_override:module.patch",
        "//third_party/lmdb:strdup.patch",
    ],
)
