module(
    name = "sorbet",
    repo_name = "com_stripe_ruby_typer",
    version = "0.0.0",
)

# Core Bazel dependencies from BCR
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_features", version = "1.30.0")

# Core libraries
bazel_dep(name = "protobuf", version = "27.0", repo_name = "com_google_protobuf")
bazel_dep(name = "abseil-cpp", version = "20240722.0", repo_name = "com_google_absl")

# Rule sets
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.0")

# Testing
bazel_dep(name = "doctest", version = "2.4.11", dev_dependency = True)

# Override transitive deps for Bazel 8 compatibility
single_version_override(
    module_name = "rules_python",
    version = "1.2.0",
)

# C++ Libraries (migrated from WORKSPACE)
bazel_dep(name = "lz4", version = "1.10.0.bcr.1")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "xxhash", version = "0.8.3.bcr.1")
bazel_dep(name = "mimalloc", version = "2.2.4")
bazel_dep(name = "spdlog", version = "1.16.0.bcr.2")
bazel_dep(name = "libprotobuf-mutator", version = "1.3")
bazel_dep(name = "rapidjson", version = "1.1.0")

archive_override(
    module_name = "rapidjson",
    urls = ["https://github.com/Tencent/rapidjson/archive/f376690822cbc2d17044e626be5df21f7d91ca8f.zip"],
    strip_prefix = "rapidjson-f376690822cbc2d17044e626be5df21f7d91ca8f",
    integrity = "sha256-lCUnZYPf+QIM7mMyRysM8keuMly18m2+FXGD90faORA=",
    build_file = "//third_party/rapidjson:rapidjson.BUILD",
    patches = ["//third_party/rapidjson:module.patch"],
)

bazel_dep(name = "lmdb", version = "0.9.29")
bazel_dep(name = "cxxopts", version = "2.2.1")

archive_override(
    module_name = "cxxopts",
    urls = ["https://github.com/jarro2783/cxxopts/archive/c74846a891b3cc3bfa992d588b1295f528d43039.zip"],
    strip_prefix = "cxxopts-c74846a891b3cc3bfa992d588b1295f528d43039",
    integrity = "sha256-S6Kwo8lOYVAbl0EYoP4XHNZY+O/dlB6a2C5x9IqYkzo=",
    build_file = "//third_party/cxxopts_override:cxxopts.BUILD",
    patches = ["//third_party/cxxopts_override:module.patch"],
)

archive_override(
    module_name = "lmdb",
    urls = ["https://github.com/LMDB/lmdb/archive/da9aeda08c3ff710a0d47d61a079f5a905b0a10a.zip"],
    strip_prefix = "lmdb-da9aeda08c3ff710a0d47d61a079f5a905b0a10a",
    integrity = "sha256-iToyS2DGRl7c9/632vrLPV9YA2SfG13m9FOzptniu5c=",
    build_file = "//third_party/lmdb_override:lmdb.BUILD",
    patches = [
        "//third_party/lmdb_override:module.patch",
        "//third_party/lmdb:strdup.patch",
    ],
)

bazel_dep(name = "dtl", version = "1.19")

archive_override(
    module_name = "dtl",
    urls = ["https://github.com/cubicdaiya/dtl/archive/v1.19.tar.gz"],
    strip_prefix = "dtl-1.19",
    integrity = "sha256-9HuZ3RHl13GtMqjclg20qy++NJ+wNG+geV9TyEapnF0=",
    build_file = "//third_party/dtl_override:dtl.BUILD",
    patches = ["//third_party/dtl_override:module.patch"],
)

bazel_dep(name = "pdqsort", version = "1.0.0")

archive_override(
    module_name = "pdqsort",
    urls = ["https://github.com/orlp/pdqsort/archive/08879029ab8dcb80a70142acb709e3df02de5d37.zip"],
    strip_prefix = "pdqsort-08879029ab8dcb80a70142acb709e3df02de5d37",
    integrity = "sha256-rYyc09Gr5dVmutNBvM4yei6Je2Qjan+edPS5sOfl3Dk=",
    build_file = "//third_party/pdqsort_override:pdqsort.BUILD",
    patches = ["//third_party/pdqsort_override:module.patch"],
)

bazel_dep(name = "rang", version = "3.1.0")

archive_override(
    module_name = "rang",
    urls = ["https://github.com/agauniyal/rang/archive/v3.1.0.zip"],
    strip_prefix = "rang-3.1.0",
    integrity = "sha256-ZYreuKNtNpgdQzn8g58t7twOdctCHbGYIEHYoKJVg10=",
    build_file = "//third_party/rang_override:rang.BUILD",
    patches = ["//third_party/rang_override:module.patch"],
)

bazel_dep(name = "concurrentqueue", version = "1.0.0")

archive_override(
    module_name = "concurrentqueue",
    urls = ["https://github.com/cameron314/concurrentqueue/archive/79cec4c3bf1ca23ea4a03adfcd3c2c3659684dd2.zip"],
    strip_prefix = "concurrentqueue-79cec4c3bf1ca23ea4a03adfcd3c2c3659684dd2",
    integrity = "sha256-p4/yMuKZaSetb70BXR8V37IL9SSofOKJPmTbvh8EBR4=",
    build_file = "//third_party/concurrentqueue_override:concurrentqueue.BUILD",
    patches = ["//third_party/concurrentqueue_override:module.patch"],
)

bazel_dep(name = "statsd", version = "1.0.0")

archive_override(
    module_name = "statsd",
    urls = ["https://github.com/romanbsd/statsd-c-client/archive/08ecca678345f157e72a1db1446facb403cbeb65.zip"],
    strip_prefix = "statsd-c-client-08ecca678345f157e72a1db1446facb403cbeb65",
    integrity = "sha256-glOVVW+1Uzgxc+R9vOmBZZgdEAWHmTKS7J0XTsQKe6E=",
    build_file = "//third_party/statsd_override:statsd.BUILD",
    patches = ["//third_party/statsd_override:module.patch"],
)

bazel_dep(name = "mpack", version = "1.0.0")

archive_override(
    module_name = "mpack",
    urls = ["https://github.com/ludocode/mpack/archive/6883f6f8067d5c6dbaaddeaa47aaaaa763eea51c.zip"],
    strip_prefix = "mpack-6883f6f8067d5c6dbaaddeaa47aaaaa763eea51c",
    integrity = "sha256-+xhNwWlyLOz5tHvs4wj3CGF4f0YV69vuc4O2Q0z9vA0=",
    build_file = "//third_party/mpack_override:mpack.BUILD",
    patches = ["//third_party/mpack_override:module.patch"],
)

bazel_dep(name = "crcpp", version = "1.0.0")

archive_override(
    module_name = "crcpp",
    urls = ["https://github.com/d-bahr/CRCpp/archive/51fbc35ef892e98abe91a51f7320749c929d72bd.zip"],
    strip_prefix = "CRCpp-51fbc35ef892e98abe91a51f7320749c929d72bd",
    integrity = "sha256-V8TBJ7WqRFFVaWnWkpz5RlpdVIGzRC3bh42VKWyu7ks=",
    build_file = "//third_party/crcpp_override:crcpp.BUILD",
    patches = ["//third_party/crcpp_override:module.patch"],
)

bazel_dep(name = "cpp_subprocess", version = "1.0.0")

archive_override(
    module_name = "cpp_subprocess",
    urls = ["https://github.com/arun11299/cpp-subprocess/archive/9c624ce4e3423cce9f148bafbae56abfd6437ea0.zip"],
    strip_prefix = "cpp-subprocess-9c624ce4e3423cce9f148bafbae56abfd6437ea0",
    integrity = "sha256-GBDR7IDzwxncu1MEQ7JkuaMqRJtaXTYwB25HNki7qMw=",
    build_file = "//third_party/cpp_subprocess_override:cpp_subprocess.BUILD",
    patches = ["//third_party/cpp_subprocess_override:module.patch"],
)

bazel_dep(name = "blake2", version = "1.0.0")

archive_override(
    module_name = "blake2",
    urls = ["https://github.com/BLAKE2/BLAKE2/archive/997fa5ba1e14b52c554fb03ce39e579e6f27b90c.zip"],
    strip_prefix = "BLAKE2-997fa5ba1e14b52c554fb03ce39e579e6f27b90c",
    integrity = "sha256-Vtr+lRL2VyjOerx4kAJy+L+OlcoEQ5s2LS3EYZJ7Khc=",
    build_file = "//third_party/blake2_override:blake2.BUILD",
    patches = ["//third_party/blake2_override:module.patch"],
)

bazel_dep(name = "libb2", version = "1.0.0")

archive_override(
    module_name = "libb2",
    urls = ["https://github.com/BLAKE2/libb2/archive/fa83ddbe179912e9a7a57edf0333b33f6ff83056.zip"],
    strip_prefix = "libb2-fa83ddbe179912e9a7a57edf0333b33f6ff83056",
    integrity = "sha256-3SX3rFM3HCoVdh/BaJ0E3i/5SKx+IToQ0Tlh4ksMmuY=",
    build_file = "//third_party/libb2_override:libb2.BUILD",
    patches = ["//third_party/libb2_override:module.patch"],
)

bazel_dep(name = "prism", version = "1.6.0")

archive_override(
    module_name = "prism",
    urls = ["https://github.com/ruby/prism/releases/download/v1.6.0/libprism-src.tar.gz"],
    strip_prefix = "libprism-src",
    integrity = "sha256-pkNRe5EMUQyZilGORaZvfzRg5bMvgNZKoAIf7XyWfQ8=",
    build_file = "//third_party/prism_override:prism.BUILD",
    patches = ["//third_party/prism_override:module.patch"],
)

bazel_dep(name = "jemalloc", version = "5.3.0")

archive_override(
    module_name = "jemalloc",
    urls = ["https://github.com/jemalloc/jemalloc/archive/20f9802e4f25922884448d9581c66d76cc905c0c.zip"],
    strip_prefix = "jemalloc-20f9802e4f25922884448d9581c66d76cc905c0c",
    integrity = "sha256-HMHsk3AYaGkcc7Nx64flRSJXmWJ5pCMDqRyq01U3RDk=",
    build_file = "//third_party/jemalloc_override:jemalloc.BUILD",
    patches = ["//third_party/jemalloc_override:module.patch"],
)

bazel_dep(name = "rbs_parser", version = "1.0.0")

archive_override(
    module_name = "rbs_parser",
    urls = ["https://github.com/ruby/rbs/archive/e5901cd788caa00392c38518e27d3c2800a34328.zip"],
    strip_prefix = "rbs-e5901cd788caa00392c38518e27d3c2800a34328",
    integrity = "sha256-CUE86fdef2X9r7bGSi/u0g8SxcDhs4Nxb9Ty/pLq4aA=",
    build_file = "//third_party/rbs_parser_override:rbs_parser.BUILD",
    patches = ["//third_party/rbs_parser_override:module.patch"],
)
