cc_library(
    name = "sig_finder",
    srcs = glob(
        [
            "*.cc",
            "*.h",
        ],
    ),
    hdrs = [
        "sig_finder.h",
    ],
    linkstatic = select({
        "//tools/config:linkshared": 0,
        "//conditions:default": 1,
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "//resolver/type_syntax",
        "@com_google_absl//absl/strings",
    ],
)
